# rufuspp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
misc/: 7zip-install.py  cdrtools-install.py
src/: execute.hpp  iso.cpp  iso.hpp  main.cpp  usb_detector.cpp  usb_detector.hpp
src/extractor/: iso.cpp  iso.hpp  uefi.hpp
src/storage/: format.cpp  format.hpp
tests/: CMakeLists.txt  test_format.cpp  test_iso.cpp  test_usb_detector.cpp
